--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 body{
-	background: red;
+	background: #dac1fd;
+	margin-left: 20px;
+}
+
+h1 {
+	color: yellow;
+	font-family: fantasy;
+}
+
+h2 {
+	font-family: fantasy;
+}
+
+p {
+	font-size: 18px;
 }
